[package]
name = "grrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# clap = { version = "4.0", features = ["derive"] }
# anyhow = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]  }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
